# NeuralNetworks

./: CMakeLists.txt  NN.h  NN.h~  README.md  testNN  testNN.cpp  testNN.cpp~  testNN2.cpp  testNN2.cpp~
RLFramework/: CMakeLists.txt  CMakeLists.txt~  datas.t.txt  run~  testRLFramework.cpp  totalreturn.txt
RLFrameworkBIPEDALWALKER/ACTORCRITIC/use2/: CARTPOLENNACTORCRITIC.weights_0  CARTPOLENNACTORCRITICFA.topo  CARTPOLENNACTORCRITICFA.weights_0  CARTPOLENNACTORCRITICFA.weights_1  CARTPOLENNACTORCRITICFA.weights_2  CARTPOLENNACTORCRITICFA.weights_3  CARTPOLENNACTORCRITICFA.weights_4  CARTPOLENNACTORCRITICPA.topo  CARTPOLENNACTORCRITICPA.weights_0  CARTPOLENNACTORCRITICPA.weights_1  CARTPOLENNACTORCRITICPA.weights_2  CARTPOLENNACTORCRITICPA.weights_3  CARTPOLENNACTORCRITICPA.weights_4  CMakeLists.txt  CMakeLists.txt~  MAKEMANUAL  TEST_A_MEAN.txt  TEST_A_STD.txt  TEST_Loss.txt  TEST_MeanReturn.txt  TEST_MinReturn.txt  TEST_QSA_MEAN.txt  TEST_QSA_STD.txt  TEST_TotalReturn.txt  actorcriticuse.cpp  actorcriticuse.cpp~  list2numpy.py  test  totalreturn.txt
RLFrameworkBIPEDALWALKER/ACTORCRITIC/use2/DATAS/: DATA_EPISODE_RK_10.txt-1  DATA_EPISODE_RK_100.txt-1  DATA_EPISODE_RK_1000.txt-1  DATA_EPISODE_RK_1001.txt-1  DATA_EPISODE_RK_1002.txt-1  DATA_EPISODE_RK_1003.txt-1  DATA_EPISODE_RK_1004.txt-1  DATA_EPISODE_RK_1005.txt-1  DATA_EPISODE_RK_1006.txt-1  DATA_EPISODE_RK_1007.txt-1  DATA_EPISODE_RK_1008.txt-1  DATA_EPISODE_RK_1009.txt-1  DATA_EPISODE_RK_101.txt-1  DATA_EPISODE_RK_1010.txt-1  DATA_EPISODE_RK_1011.txt-1  DATA_EPISODE_RK_1012.txt-1  DATA_EPISODE_RK_1013.txt-1  DATA_EPISODE_RK_1014.txt-1  DATA_EPISODE_RK_1015.txt-1  DATA_EPISODE_RK_1016.txt-1  DATA_EPISODE_RK_1017.txt-1  DATA_EPISODE_RK_1018.txt-1  DATA_EPISODE_RK_1019.txt-1  DATA_EPISODE_RK_102.txt-1  DATA_EPISODE_RK_1020.txt-1  DATA_EPISODE_RK_1021.txt-1  DATA_EPISODE_RK_1022.txt-1  DATA_EPISODE_RK_1023.txt-1  DATA_EPISODE_RK_1024.txt-1  DATA_EPISODE_RK_1025.txt-1  DATA_EPISODE_RK_1026.txt-1  DATA_EPISODE_RK_1027.txt-1  DATA_EPISODE_RK_1028.txt-1  DATA_EPISODE_RK_1029.txt-1  DATA_EPISODE_RK_103.txt-1  DATA_EPISODE_RK_1030.txt-1  DATA_EPISODE_RK_1031.txt-1  DATA_EPISODE_RK_1032.txt-1  DATA_EPISODE_RK_1033.txt-1  DATA_EPISODE_RK_1034.txt-1  (+1758 more)
RLFrameworkBIPEDALWALKER/ACTORCRITIC/use2/INGDBSAVE/: CARTPOLENNACTORCRITIC.FA.NEW.weights_0  CARTPOLENNACTORCRITIC.FA.NEW.weights_1  CARTPOLENNACTORCRITIC.FA.NEW.weights_4  CARTPOLENNACTORCRITIC.PA.NEW.weights_0  CARTPOLENNACTORCRITIC.PA.NEW.weights_1  CARTPOLENNACTORCRITIC.PA.NEW.weights_4  CARTPOLENNACTORCRITIC.PA.weight_0  VIZUALIZATION_Policy.txt
RLFrameworkBIPEDALWALKER/ACTORCRITIC/use2/WITHVVALUES/: CARTPOLENNACTORCRITICPA.weights_0  CARTPOLENNACTORCRITICPA.weights_1  CMakeLists.txt  TEST_A_MEAN.txt  TEST_A_STD.txt  TEST_MeanReturn.txt  TEST_QSA_MEAN.txt  TEST_QSA_STD.txt  actorcriticVuse.cpp  actorcriticVuse.cpp~  totalreturn.txt
RLFrameworkBIPEDALWALKER/ACTORCRITIC/use2/WITHVVALUES/INGDBSAVE/: CARTPOLENNACTORCRITIC.FA.NEW.weights_1  CARTPOLENNACTORCRITIC.PA.NEW.weights_1  CARTPOLENNACTORCRITIC.PA.NEW.weights_2
RLFrameworkBIPEDALWALKER/ACTORCRITIC/use2/WITHVVALUES/MINUSDATAS/: TEST_A_MEAN.txt  TEST_A_STD.txt  TEST_QSA_MEAN.txt  TEST_QSA_STD.txt  TEST_TotalReturn.txt
RLFrameworkBIPEDALWALKER/ACTORCRITIC/use2/WITHVVALUES/PLUSDATAS/: TEST_A_MEAN.txt  TEST_MinReturn.txt  (+2 more)
RLFrameworkBIPEDALWALKER/ACTORCRITIC/use2/discrete/: CMakeLists.txt  runDiscrete~
RLFrameworkCARTPOLE/ACTORCRITIC/creation2/INGDBSAVE/: CARTPOLENNACTORCRITIC.FA.NEW.weights_2  CARTPOLENNACTORCRITIC.PA.NEW.weights_0  CARTPOLENNACTORCRITIC.PA.NEW.weights_3  CARTPOLENNACTORCRITIC.PA.weight_1  CMakeLists.txt  CMakeLists.txt~  VALIDATION_Policy.txt  VALIDATION_Policy_ACTIONS.txt  run  run~  validationPOLICY.cpp  validationPOLICY.cpp~
RLFrameworkOPENAIGYM/ACTORCRITIC/: CMakeLists.txt  DDPGA3C_OpenAIGym.cpp  README.txt  TEST_A_MEAN.txt  TEST_A_STD.txt  TEST_Loss.txt  TEST_MeanReturn.txt  TEST_MinReturn.txt  TEST_QSA_MEAN.txt  TEST_QSA_STD.txt  TEST_TotalReturn.txt  actorcriticuse.cpp  make  makeMANUAL  output.out  run  totalreturn.txt  vizualizePolicy.cpp
(+787 files in other folders)
